# StatsViewServer

./: .gitignore  MANIFEST.in  README.md  graph_generator.py  pyproject.toml  requirements.txt  setup.cfg  setup.py  stats_tracker.py  statsviewer.py  svg_generator.py  wsgi.py
static/: stylesheet.css
statsviewer_SuperKaninchen/: graph_generator.py  stats_tracker.py  statsviewer.py  wsgi.py
statsviewer_SuperKaninchen/static/: script.js  stylesheet.css
statsviewer_SuperKaninchen/templates/: viewPageTemplate.jinja
templates/: viewPageTemplate.html  viewPageTemplate.jinja
